Fix overflow issue again

--- a/src/assets/css/global/layout.scss
+++ b/src/assets/css/global/layout.scss
@@ -18,7 +18,7 @@
   }
 
   &.no-overflow {
-    overflow-x: hidden;
+    overflow: hidden;
   }
 }
 
